[gd_scene load_steps=2 format=3 uid="uid://dqp2gua5cyyg3"]

[ext_resource type="Script" path="res://Scripts/mainMenu.gd" id="1_e70oj"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e70oj")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.17, 0.1394, 0.1394, 1)

[node name="MainMenuContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -372.0
offset_right = 150.0
grow_horizontal = 2
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenuContainer"]
custom_minimum_size = Vector2(300, 500)
layout_mode = 2

[node name="New Game" type="Button" parent="MainMenuContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 90)
layout_mode = 2
text = "New Game"

[node name="Load Game" type="Button" parent="MainMenuContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 90)
layout_mode = 2
text = "Load Game"

[node name="Settings" type="Button" parent="MainMenuContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 90)
layout_mode = 2
text = "Settings"

[node name="Quit" type="Button" parent="MainMenuContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 90)
layout_mode = 2
text = "Quit"

[node name="SettingsContainer" type="MarginContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -372.0
offset_right = 150.0
grow_horizontal = 2
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsContainer"]
custom_minimum_size = Vector2(300, 500)
layout_mode = 2

[node name="New Game" type="Button" parent="SettingsContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 90)
layout_mode = 2
text = "New Game"

[node name="Load Game" type="Button" parent="SettingsContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 90)
layout_mode = 2
text = "Load Game"

[node name="Settings" type="Button" parent="SettingsContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 90)
layout_mode = 2
text = "Settings"

[node name="Quit" type="Button" parent="SettingsContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 90)
layout_mode = 2
text = "Quit"

[node name="SaveFilesContainer" type="MarginContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -372.0
offset_right = 150.0
grow_horizontal = 2
grow_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="SaveFilesContainer"]
layout_mode = 2

[node name="VBoxContainer_" type="VBoxContainer" parent="SaveFilesContainer/HBoxContainer"]
custom_minimum_size = Vector2(300, 500)
layout_mode = 2

[node name="Slot1" type="Button" parent="SaveFilesContainer/HBoxContainer/VBoxContainer_"]
custom_minimum_size = Vector2(300, 90)
layout_mode = 2
text = "Slot 1
"

[node name="Slot3" type="Button" parent="SaveFilesContainer/HBoxContainer/VBoxContainer_"]
custom_minimum_size = Vector2(300, 90)
layout_mode = 2
text = "Slot 3
"

[node name="Slot5" type="Button" parent="SaveFilesContainer/HBoxContainer/VBoxContainer_"]
custom_minimum_size = Vector2(300, 90)
layout_mode = 2
text = "Slot 5
"

[node name="Slot7" type="Button" parent="SaveFilesContainer/HBoxContainer/VBoxContainer_"]
custom_minimum_size = Vector2(300, 90)
layout_mode = 2
text = "Slot 7
"

[node name="VBoxContainer_2" type="VBoxContainer" parent="SaveFilesContainer/HBoxContainer"]
custom_minimum_size = Vector2(300, 500)
layout_mode = 2

[node name="Slot2" type="Button" parent="SaveFilesContainer/HBoxContainer/VBoxContainer_2"]
custom_minimum_size = Vector2(300, 90)
layout_mode = 2
text = "Slot 2
"

[node name="Slot4" type="Button" parent="SaveFilesContainer/HBoxContainer/VBoxContainer_2"]
custom_minimum_size = Vector2(300, 90)
layout_mode = 2
text = "Slot 1
"

[node name="Slot6" type="Button" parent="SaveFilesContainer/HBoxContainer/VBoxContainer_2"]
custom_minimum_size = Vector2(300, 90)
layout_mode = 2
text = "Slot 1
"

[node name="Slot8" type="Button" parent="SaveFilesContainer/HBoxContainer/VBoxContainer_2"]
custom_minimum_size = Vector2(300, 90)
layout_mode = 2
text = "Slot 1
"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
offset_left = 498.0
offset_top = 150.0
offset_right = -498.0
offset_bottom = 350.0
grow_horizontal = 2

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
color = Color(0.2, 0.1001, 0.038, 1)

[node name="Label" type="Label" parent="MarginContainer/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.5
offset_top = -11.5
offset_right = 55.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 72
text = "THE CROOKED"

[connection signal="pressed" from="MainMenuContainer/VBoxContainer/New Game" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="MainMenuContainer/VBoxContainer/Load Game" to="." method="_on_load_game_pressed"]
[connection signal="pressed" from="MainMenuContainer/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="MainMenuContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="SettingsContainer/VBoxContainer/New Game" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="SettingsContainer/VBoxContainer/Load Game" to="." method="_on_load_game_pressed"]
[connection signal="pressed" from="SettingsContainer/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="SettingsContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="SaveFilesContainer/HBoxContainer/VBoxContainer_/Slot1" to="." method="_on_slot_1_pressed"]
